# ecommerce-ops

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
flows/: __init__.py  data_splitting_flow.py  featurization_flow.py  models.py  split_data.py  transform_data.py
flows/models/: __init__ .py  data_models.py
flows/subflows/: __init__.py  clean_data.py  transform_data.py
utils/: __init__.py  split_data.py
