[tool.poetry]
name = "ecommerce-ops"
version = "0.1.0"
description = "A project for learning data engineering and mlops."
authors = ["Troy Jennings <troy.c.jennings@gmail.com>"]
readme = "README.md"
packages = [{include = "ecommerce-ops"}]

[tool.poetry.dependencies]
feast = "^0.29.0"
polars = "^0.16.2"
pre-commit = "^3.1.1"
prefect = "^2.7.11"
pydantic = "^1.10.4"
pytest = "^7.2.1"
python = "^3.10"
python-dotenv = "^0.21.1"
spacy = "^3.5.0"
greenlet = "^2.0.2"

[tool.poetry.group.dev.dependencies]
orjson = "^3.8.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
